fixed image alignment in post

--- a/wp-content/themes/Arduino/style.css
+++ b/wp-content/themes/Arduino/style.css
@@ -73,6 +73,10 @@ margin-bottom: 115px;
   background-repeat: no-repeat;
 }
 
+img.alignleft {
+    float: left;
+    margin-right: 15px;
+  }
 
 /*div.columns {
 padding-left: 0px;
